--- a/Week1/homework/js-exercises/dog.html
+++ b/Week1/homework/js-exercises/dog.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    <button id="buttonOne">XML</button>
-    <button id="buttonTwo">Axios</button>
+    <button id="xmlButton">XML</button>
+    <button id="axiosButton">Axios</button>
 
     <ul id="imgList"></ul>
 
