--- a/homework/index.html
+++ b/homework/index.html
@@ -16,7 +16,16 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <header class="header">
+      <h2 class="header-title">HYF Repositories</h2>
+    </header>
+    <main class="main-container">
+      <section class="repo-container"></section>
+      <section class="contributors-container"></section>
+    </main>
+  </div>
+
   <script src="./index.js"></script>
 </body>
 
