--- a/homework/index.html
+++ b/homework/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,7 +17,16 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <header class="header">
+      <h2 class="header-title">HYF Repositories</h2>
+    </header>
+    <main class="main-container">
+      <section class="repo-container"></section>
+      <section class="contributors-container"></section>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./index.js"></script>
 </body>
 
